# lazy_timer

./: .gitignore  README.md  pyproject.toml
src/lazy_timer/: __init__.py
